# typcord

./: Cargo.toml
lib/: theorems.typ
src/: event_handler.rs  main.rs
