[package]
name = "typcord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.13"
futures-util = "0.3"
serde_json = "1.0"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
regex = "1"
phf = { version = "0.11.1", features = ["macros"] }
flate2 = "1"
tar = "0.4"
memfile = "0.2"
strum = "0.24"
strum_macros = "0.24"
log = "0.4.0"
env_logger = "0.9.0"

[dependencies.serenity]
default-features = true
features = ["builder", "cache", "client", "gateway", "model", "utils", "unstable_discord_api", "collector", "rustls_backend", "framework"]
git = "https://github.com/serenity-rs/serenity"
branch = "next"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
